<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#333333"
    android:orientation="vertical"
    style="@style/AppTheme">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/medium_white"
            android:id="@+id/imageView"
            android:contentDescription="@string/icon"
            android:layout_gravity="center_vertical"/>

        <TextView android:text="@string/greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:id="@+id/textView"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructions"
        android:layout_gravity="center_horizontal"
        android:text="@string/instructions"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/speed"
            android:layout_gravity="center_horizontal"
            android:singleLine="false"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/kmph"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stopDistWet"
            android:text="@string/stoppingDistanceWet"
            android:onClick="onStopDistWetClick"
            android:layout_gravity="center" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stopDistDry"
            android:text="@string/stoppingDistanceDry"
            android:onClick="onStopDistDryClick"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanceTraveled"
            android:id="@+id/disTravel"
            android:onClick="onDistTravelClick"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_gravity="center"
            android:onClick="onExitClick"
            android:id="@+id/exit"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="105dp"
            android:src="@drawable/snowflake"
            android:contentDescription="@string/snowFlake"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
