<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#333333">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/resultPrefix"
    android:id="@+id/result"
    android:textColor="#FFFFFF"
        android:padding="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:id="@+id/message"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="xxxx" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:id="@+id/safety_message"
        android:text="@string/be_safe"
        android:paddingTop="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">



        <ImageView
            android:layout_width="120dp"
            android:layout_height="105dp"
            android:src="@drawable/snowflake"
            android:contentDescription="@string/snowFlake"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnInstructions"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/imageView2"
            android:layout_toStartOf="@+id/imageView2"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textStyle="italic"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="15dp" />
    </RelativeLayout>

</LinearLayout>